# d3d12-deferred-renderer

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
assets/shaders/: cube.hlsl  geometry.hlsl  lighting.hlsl  triangle.hlsl
source/: main.cpp
